@@ -62,8 +62,12 @@
     </scm>
 
     <properties>
+        <maven.compiler.executable>${env.JAVA_HOME}/bin/javac</maven.compiler.executable>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 
     <dependencyManagement>
         <dependencies>
@@ -160,6 +164,22 @@
     <build>
         <pluginManagement>
             <plugins>
+<!--
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.10.1</version>
+                    <configuration>
+                        <executable>${env.JAVA_HOME}/bin/javac</executable>
+                        <source>19</source>
+                        <target>19</target>
+                        <compilerArgs>
+                            <arg>&#45;&#45;enable-preview</arg>
+                            <arg>&#45;&#45;add-modules jdk.incubator.concurrent</arg>
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+-->
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
@@ -195,23 +215,6 @@
                         </execution>
                     </executions>
 -->
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
-                    <configuration>
-                        <compilerArgs>--release 18</compilerArgs>
-                        <compilerArgs>--enable-preview</compilerArgs>
-                        <!--
-                                            <compilerArgs>
-                                                <executable>C:/Program Files (Open)/jdk-18/bin/javac</executable>
-                                            </compilerArgs>
-                        -->
-                        <compilerVersion>18</compilerVersion>
-                        <source>18</source>
-                        <target>18</target>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
